# vector_bot

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.toml  tickets.json
src/: config.rs  database.rs  main.rs
src/commands/: general.rs  giveaway.rs  info.rs  mod.rs  moderation.rs  profile.rs  ticket.rs
src/giveaway_system/: events.rs
src/ticket_system/: events.rs  mod.rs  structs.rs
src/voice_system/: events.rs  structs.rs
