[package]
name = "vector_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
sysinfo = "0.37.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
toml = "0.9.10"
chrono = "0.4.42"
